--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Stefanpgr/event-dataset#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "core-js": "^3.13.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
